2006-05-22  Derek Price  <derek@ximbiot.com>

	* sanity.sh (rcs6): New test.

2006-05-16  Derek Price  <derek@ximbiot.com>

	* main.c: Update copyright for 2006.

2006-05-12  Mark D. Baushke  <mdb@gnu.org>

	* log.c (log_expand_revlist): Add assert (r->first). It should
	only be possible for both r->first == NULL && r->last == NULL
	which would have been handled.
	[Fixes NetBSD coverity cid-1063.]

	* server.c (do_cvs_command): Protect close (dev_null_fd) against
	invalid fd value in error_exit.
	[Fixes NetBSD coverity cid-1307.]
	
	* rcs.c (RCS_isdead): Assert that the first argument is not NULL.
	[Fixes NetBSD coverity cid-1058.]

	* commit.c (checkaddfile): Do not dereference NULL on call to
	error().
	[Fixes NetBSD coverity cid-1061.]

	* log.c (cvslog): Assert p->start && p->end instead of masking the
	problem.
	* server.c (server_updated): Assert findnode_fn results instead of
	masking the problem.
	
	* add.c (add_directory): Revert previous change. The xstrdup()
	function already deals a NULL argument.
	* client.c (handle_mt): Ditto.
	* entries.c (Entnode_Create): Ditto.
	(Entries_Open): Ditto.
	* logmsg.c (fmt_proc): Ditto.
	* vers_ts.c (Version_TS): Ditto.
	
2006-05-11  Mark D. Baushke  <mdb@gnu.org>

	* add.c (add_directory): Protect tag from NULL dereference.
	[Fixes NetBSD cid-1054.]

	* client.c (handle_mt): Deal with missing text argument.
	[Fixes NetBSD cid-924.]

	* entries.c (Entnode_Create): Protect date, tag and ts_conflict
	from possible NULL dereference.
	[Fixes NetBSD coverity cid-994, cid-995, cid-1055, cid-1057.]

	* entries.c (Entries_Open): Protect dirtag and dirdate from
	possible NULL dereference.
	[Fixes NetBSD coverity cid-996.]

	* log.c (cvslog): Validate start and end args to
	date_to_internet().
	[Fixes NetBSD coverity cid-2427 and cid-2428.]

	* logmsg.c (fmt_proc): Protect li->tag from NULL dereference.
	[Fixes NetBSD coverity cid-997.]

	* vers_ts.c (Version_TS): Protect tag and vers_ts->tag from NULL
	dereference.